k8s/bonus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-golang-service
spec:
  selector:
    app: app-golang
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
