k8s/bonus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonus-ingress-golang
spec:
  ingressClassName: nginx
  rules:
    - host: joke.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-golang-service
                port:
                  number: 82
